--- a/Codigo/Projeto/pages/comofunciona.html
+++ b/Codigo/Projeto/pages/comofunciona.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Como Funciona | Livros Viajantes</title>
     <link rel="stylesheet" href="../style/style-como-funciona.css">
+    <script src="../js/ComoFunciona.js"></script>
 </head>
 
 <body>
@@ -17,47 +18,49 @@
             <div class="logo-container">
                 <a href="inicio.html"><img src="img/logo1-removebg-preview.png" alt="logo" class="logo"></a>
             </div>
-            <h1 class="header-title">Como Funciona</h1>
-            <p>Descubra como você pode trocar seus livros favoritos e viajar pelo mundo literário.</p>
+            <nav class="header-nav">
+                <a href="comofunciona.html" class="header-button1">Como Funciona</a>
+                <a href="login.html" class="header-button2">Login</a>
+                <a href="CadastroUsuarios.html" class="header-button3">Cadastrar</a>
+                <a href="postagem-livros.html" class="header-button4">Catálogo de Livros</a>
+                <a href="login.html" class="header-button5">Troque Agora</a>
+            </nav>
+            <section id="banner" class="banner">
+                <h1 class="header-title">Como Funciona</h1>
+                <p>Descubra como você pode trocar seus livros favoritos e viajar pelo mundo literário.</p>
+            </section>
         </div>
-
-        <!-- Menu de navegação -->
-        <nav>
-            <ul>
-                <li><a href="inicio.html" class="header-button">Início</a></li>
-                <li><a href="./login.html" class="header-button">Login</a></li> <!-- Ajuste conforme necessário -->
-                <li><a href="CadastroUsuarios.html" class="header-button">Cadastrar</a></li>
-                <li><a href="postagem-livros.html" class="header-button">Catálogo de Livros</a></li>
-                <li><a href="login.html" class="header-button">Troque Agora</a></li>
-            </ul>
-        </nav>
-
     </header>
 
     <!-- Seção de Explicação -->
     <section class="container">
         <h2>O Processo de Troca</h2>
-        <p>No <strong>Livros Viajantes</strong>, o processo de troca de livros é simples e transparente. Veja como funciona:</p>
+        <p>No <strong>Livros Viajantes</strong>, o processo de troca de livros é simples e transparente. Veja como
+            funciona:</p>
 
         <div class="steps">
             <div class="step">
                 <h3>1. Cadastre seu livro</h3>
-                <p>Adicione o livro que você deseja trocar em nosso sistema. Defina o estado do livro (novo, usado) e atribua um valor em pontos, que será usado na troca.</p>
+                <p>Adicione o livro que você deseja trocar em nosso sistema. Defina o estado do livro (novo, usado) e
+                    atribua um valor em pontos, que será usado na troca.</p>
             </div>
 
             <div class="step">
                 <h3>2. Explore os livros disponíveis</h3>
-                <p>Navegue pelo catálogo e encontre livros oferecidos por outros usuários. Cada livro também terá um valor em pontos.</p>
+                <p>Navegue pelo catálogo e encontre livros oferecidos por outros usuários. Cada livro também terá um
+                    valor em pontos.</p>
             </div>
 
             <div class="step">
                 <h3>3. Solicite uma troca</h3>
-                <p>Ao encontrar um livro que lhe interesse, solicite a troca. Certifique-se de que o valor do seu livro corresponde ao valor do livro que você deseja.</p>
+                <p>Ao encontrar um livro que lhe interesse, solicite a troca. Certifique-se de que o valor do seu livro
+                    corresponde ao valor do livro que você deseja.</p>
             </div>
 
             <div class="step">
                 <h3>4. Confirmação e envio</h3>
-                <p>Quando o outro usuário aceitar a troca, ambos recebem os detalhes de envio. Envie o livro e receba o seu novo título!</p>
+                <p>Quando o outro usuário aceitar a troca, ambos recebem os detalhes de envio. Envie o livro e receba o
+                    seu novo título!</p>
             </div>
         </div>
     </section>
