--- a/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
@@ -84,16 +84,15 @@
                         <i class="fas fa-image icon"></i>
                         <input type="url" id="book-image-url" name="book-image-url" placeholder="Cole a URL da imagem">
                     </div>
-                </div>
+                </div>-->
 
                 <div class="form-group">
-                    <label for="book-image">Ou faça upload da Imagem do Livro:</label>
+                    <label for="book-image">Faça upload da Imagem do Livro:</label>
                     <div class="input-icon">
                         <i class="fas fa-upload icon"></i>
                         <input type="file" id="book-image" name="book-image">
                     </div>
-                </div>-->
-
+                </div>
                 <button type="submit" class="submit-button">Cadastrar Livro</button>
             </form>
         </div>
