--- a/Codigo/Projeto/src/main/resources/Projeto/pages/meus-livros.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/meus-livros.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../style/meus-livros.css">
     <title>Minha Biblioteca</title>
 </head>
+<ul id="lista-livros-postagem"></ul>
 <body>
     <!-- Cabeçalho -->
     <header class="header">
