--- a/Codigo/Projeto/src/main/resources/Projeto/pages/postagem-livros.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/postagem-livros.html
@@ -10,6 +10,7 @@
     <!-- Link para o CSS -->
     <link rel="stylesheet" href="../style/postagem.css">
 </head>
+<ul id="lista-livros-postagem"></ul>
 
 <body>
     <!-- Overlay para melhorar a legibilidade -->
@@ -121,7 +122,7 @@
 
     <!-- Rodapé -->
     <footer class="footer">
-            <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
         </div>
     </footer>
 
